Fix bug with some contest divs overlapping each other at less than 400px width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,6 +257,10 @@ header {
         left: 10%;
     }
 
+    .contest div {
+        padding-top: 5px
+    }
+
     #social {
         letter-spacing: 20px;
     }
